# OpenBadge-Recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/csv/: openbadge_data_new_v1.csv  user_data_new_v1.csv  user_dataset_GPT.csv
data/json/badge/: badge_B00001.json  badge_B00002.json  badge_B00003.json  badge_B00004.json  badge_B00005.json  badge_B00006.json  badge_B00007.json  badge_B00008.json  badge_B00009.json  badge_B00010.json  badge_B00011.json  badge_B00012.json  badge_B00013.json  badge_B00014.json  badge_B00015.json  badge_B00016.json  badge_B00017.json  badge_B00018.json  badge_B00019.json  badge_B00020.json  badge_B00021.json  badge_B00022.json  badge_B00023.json  badge_B00024.json  badge_B00025.json  badge_B00026.json  badge_B00027.json  badge_B00028.json  badge_B00029.json  badge_B00030.json  badge_B00031.json  badge_B00032.json  badge_B00033.json  badge_B00034.json  badge_B00035.json  badge_B00036.json  badge_B00037.json  badge_B00038.json  badge_B00039.json  badge_B00040.json  (+10160 more)
data/json/user/: user_U00001.json  user_U00002.json  user_U00003.json  user_U00004.json  user_U00005.json  user_U00006.json  user_U00007.json  user_U00008.json  user_U00009.json  user_U00010.json  user_U00011.json  user_U00012.json  user_U00013.json  user_U00014.json  user_U00015.json  user_U00016.json  user_U00017.json  user_U00018.json  (+10182 more)
data/openbadge/: Badge_dataset_GPT.csv  badge_1.json
src/: __init__.py  main.py
src/model/: badge.py  user.py
src/rag/: embedding.py  recommender.py  retriever_openbg.py
src/web/: main.py
(+2 files in other folders)
